handle fixed notification overlap problem

--- a/src/App.scss
+++ b/src/App.scss
@@ -3,3 +3,7 @@
 .App {
   margin: auto;
 }
+.container {
+  margin: auto;
+  max-width: 1366px;
+}
