--- a/src/components/Hero.scss
+++ b/src/components/Hero.scss
@@ -5,5 +5,6 @@
   background: $blue;
   background-image: url('../assets/hero-background-image.jpg');
   background-size: cover;
-  box-shadow: inset 2000px 0 0 0 $dark-blue-transparent;
+  box-shadow: inset 100vw 0 0 0 $dark-blue-transparent;
+  display: block;
 }
